@@ -25,9 +25,9 @@ module.exports = {
         "no-template-curly-in-string": ["error"],
         "curly": ["error", "multi-line"],
         "no-multi-spaces": ["error"],
-        "array-bracket-newline": ["error", { "multiline": true, "minItems": 3 }],
+        //"array-bracket-newline": ["error", { "multiline": true, "minItems": 3 }],
         "array-bracket-spacing": ["error", "always"],
-        "array-element-newline": ["error", { "multiline": true, "minItems": 3 }],
+        //"array-element-newline": ["error", { "multiline": true, "minItems": 3 }],
         "block-spacing": ["error"],
         "brace-style": ["error", "allman"],
         "no-trailing-spaces": "error",
@@ -42,7 +42,7 @@ module.exports = {
         "no-useless-concat": "error",
         "no-useless-return": "error",
         "no-useless-escape": "error",
-        "object-curly-newline": ["error", { "multiline": true }],
+        // "object-curly-newline": ["error", { "multiline": true }],
         "object-curly-spacing": ["error", "always"],
         "object-property-newline": "error",
         "one-var": ["error", "never"],
