@@ -69,5 +69,9 @@ exports.Options =
 
 /** @ignore */
 exports._ifacever_pattern = /^(([a-z][a-z0-9]*)(\.[a-z][a-z0-9]*)*):(([0-9]+)\.([0-9]+))$/;
+exports._ifacever_pattern_name = 1;
+exports._ifacever_pattern_ver = 4;
+exports._ifacever_pattern_mjr = 5;
+exports._ifacever_pattern_mnr = 6;
 /** @ignore */
 exports._isNode = ( typeof window === 'undefined' ) && require( 'detect-node' );
